TFP-6252: Utvide dto-er for inntektsgrunnlag (#649)